Adding BUCK build
This will speed up the build process of the library and generate AAR.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-/build
+.DS_Store
+
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
+# BUCK
+
+buck-cache
+/buck-out
+/.buckd
+
+# GRADLE
+
+.gradle/
+build/
